--- a/client/src/components/DeleteBtn/style.css
+++ b/client/src/components/DeleteBtn/style.css
@@ -1,4 +1,13 @@
 .delete-btn {
   float: right;
   color: #e74944;
+  margin-left: 42px;
+  font-size: 12pt;
+  border: 1px solid #e74944;
+  border-radius: 3px;
+  padding: 3px 5px 3px 5px;
+}
+
+.delete-btn:hover {
+  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.24), 0 5px 7px 0 rgba(0, 0, 0, 0.19);
 }
