--- a/client/src/components/SaveBtn/style.css
+++ b/client/src/components/SaveBtn/style.css
@@ -1,4 +1,14 @@
 .save-btn {
-  float: right;
   color: darkcyan;
+  align-content: center;
+  font-size: 16pt;
+  margin-left: 50%;
+  border: 1px solid darkcyan;
+  border-radius: 3px;
+  padding: 3px 5px 3px 5px;
+  width: 20%;
+}
+
+.save-btn:hover {
+  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.24), 0 5px 7px 0 rgba(0, 0, 0, 0.19);
 }
